@startuml

title __RESOURCES's Class Diagram__\n

  namespace nl.han.oose.jellema.rick.resources {
    class nl.han.oose.jellema.rick.resources.LoginResource {
        + login()
        + setLoginService()
    }
  }
  

  namespace nl.han.oose.jellema.rick.resources {
    class nl.han.oose.jellema.rick.resources.PlaylistResource {
        + EditPlaylist()
        + addTrackToPlaylist()
        + createPlaylist()
        + deletePlaylist()
        + deleteTrackFromPlaylist()
        + getPlaylists()
        + getTracksOfPlaylist()
        + setPlayListService()
    }
  }
  

  namespace nl.han.oose.jellema.rick.resources {
    class nl.han.oose.jellema.rick.resources.TrackResource {
        + getTracks()
        + setTracksService()
    }
  }
  

  nl.han.oose.jellema.rick.resources.LoginResource o-- nl.han.oose.jellema.rick.services.interfaces.ILoginService : loginService
  nl.han.oose.jellema.rick.resources.PlaylistResource o-- nl.han.oose.jellema.rick.services.interfaces.IPlaylistService : playListService
  nl.han.oose.jellema.rick.resources.TrackResource o-- nl.han.oose.jellema.rick.services.interfaces.ITracksService : tracksService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
